<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KanJuice</string>
    <string name="action_settings">Settings</string>

    <string name="app_title">KanJuice</string>
    <string name="refreshing">Refreshing...</string>
    <string name="title_activity_juice_menu">JuiceMenuActivity</string>
    <string name="welcome_message">Time to be healthy!</string>
    <string name="title_activity_user_input">UserInputActivity</string>
    <string name="title_activity_admin">KanJuice-Admin</string>
    <string name="set_availability">Set the Juice availability</string>
    <string name="save">Save</string>
    <string name="admin">Admin</string>
    <string name="swipe_your_card">Swipe your card to finish the order</string>
    <string name="ok">OK</string>
    <string name="order">Go</string>
    <string name="go">GO</string>
    <string name="enter_your_euid">Enter your employee id</string>
    <string name="or">OR</string>

    <string name="mango_kan">ಮಾವು</string>
    <string name="watermelon_kan">ಕಲ್ಲಂಗಡಿ</string>
    <string name="moosambi_kan">ಮೂಸಂಬಿ</string>
    <string name="muskmelon_kan">ಕರ್ಬೂಜ</string>
    <string name="pineapple_kan">ಅನಾನಸ್</string>
    <string name="grapes_kan">ದ್ರಾಕ್ಷಿ</string>
    <string name="amla_kan">ಅಮ್ಲ </string>
    <string name="kokum_kan">ಮುರುಗಲ ಹಣ್ಣು</string>
    <string name="cucumber_kan">ಸೌತೆಕಾಯಿ</string>
    <string name="mixed_fruit_kan">ಹಣ್ಣಿನ ಮಿಶ್ರಣ</string>
    <string name="orange_kan">ಕಿತ್ತಳೆ</string>
    <string name="lime_kan">ನಿಂಬೆ     </string>
    <string name="ginger_lime_kan">ನಿಂಬೆ ಮತ್ತು ಶುಂಟಿ</string>
    <string name="mint_lime_kan">ನಿಂಬೆ ಮತ್ತು ಪುದೀನ</string>
    <string name="ginger_mint_lime_kan">ನಿಂಬೆ, ಪುದೀನ, ಮತ್ತು ಶುಂಟಿ</string>
    <string name="soda_kan">ಸೋಡ</string>
    <string name="sweet_lime_soda_kan">ಸಿಹಿ ನಿಂಬೆ ಸೋಡ </string>
    <string name="salt_lime_soda_kan">ಉಪ್ಪು ನಿಂಬೆ ಸೋಡ </string>
    <string name="sweet_and_salt_lime_soda_kan">ಸಿಹಿ ಮತ್ತು ಉಪ್ಪು ನಿಂಬೆ ಸೋಡಾ</string>
    <string name="black_jeera_masala_soda_kan">ಮಸಾಲ ಸೋಡ</string>
    <string name="jal_jeera_kan">ಜೀರಿಗೆ ನೀರು</string>
    <string name="banana_kan">ಬಾಳೆಹಣ್ಣು</string>
    <string name="papaya_kan">ಪರಂಗಿ ಹಣ್ಣು</string>
    <string name="sapota_kan">ಸಪೋಟ</string>
    <string name="apple_kan">ಸೇಬು</string>
    <string name="butter_fruit_kan">ಬೆಣ್ಣೆ ಹಣ್ಣು</string>
    <string name="unknown"> </string>

    <string name="no_network_connection">No internet connection?</string>
    <string name="retry">Retry</string>
    <string name="title_activity_register">Register</string>

    <string name="hello_world">Hello world!</string>
    <string name="empId">Employee Id</string>
    <string name="name">Name</string>
    <string name="enter_emp_id_here">EmpID here</string>
    <string name="enter_name_here">Name here</string>
    <string name="papaya">ಪರಂಗಿ ಹಣ್ಣು</string>
    <string name="custard_apple">ಸೀತಾಫಲ್ </string>
    <string name="swipe_your_card_to_register">Swipe your card to register</string>
    <string name="bangalore">Bangalore</string>
    <string name="chennai">Chennai</string>
    <string name="gurgaon">Gurgaon</string>
    <string name="hyderabad">Hyderabad</string>
    <string name="pune">Pune</string>
    <string name="display_juices">Display Juices</string>
    <string name="title_activity_region_selection">Region Selection</string>
    <string name="app_splash_company_name">ThoughtWorks</string>
    <string name="app_splash_app_name">KanJuice</string>
    <string name="amla_tam">நெல்லிக் காய்</string>
    <string name="black_jeera_masala_soda_tam">மசாலா ஜீரகம் சோடா</string>
    <string name="cucumber_tam">வெள்ளரிக்காய்</string>
    <string name="ginger_lime_tam">இஞ்சி எலுமிச்சம் பழச்சாறு</string>
    <string name="ginger_mint_lime_tam">இஞ்சி புதினா எலுமிச்சம் பழச்சாறு</string>
    <string name="grapes_tam">திராட்சை</string>
    <string name="jal_jeera_tam">ஜீரக தண்ணீர்</string>
    <string name="lime_tam">எலுமிச்சை</string>
    <string name="mint_lime_tam">புதினா எலுமிச்சம் பழச்சாறு</string>
    <string name="muskmelon_tam">கர்பூரப்பழம்</string>
    <string name="orange_tam">ஆரஞ்சு</string>
    <string name="pineapple_tam">அன்னாசிப்பழம்</string>
    <string name="salt_lime_soda_tam">உப்பு எலுமிச்சை சோடா</string>
    <string name="soda_tam">சோடா</string>
    <string name="sweet_and_salt_lime_soda_tam">இனிப்பு மற்றும் உப்பு எலுமிச்சை சோடா</string>
    <string name="sweet_lime_soda_tam">இனிப்பு எலுமிச்சை சோடா</string>
    <string name="watermelon_tam">தர்பூசணி</string>
    <string name="banana_tam">வாழைப்பழம்</string>
    <string name="butter_fruit_tam">வெண்ணெய் பழம்</string>
    <string name="sapota_tam">சப்போட்டா</string>
    <string name="apple_tam">ஆப்பிள்</string>
    <string name="moosambi_tam">சாத்துக்குடி</string>
    <string name="mango_tam">மாம்பழம்</string>
    <string name="custard_apple_tam">சீத்தாப்பழம்</string>
    <string name="papaya_tam">பப்பாளி</string>
    <string name="mixed_fruit_tam">கலந்த பழங்கள்</string>
    <string name="kokum_tam">கோக்கும்</string>
</resources>
